--- a/trunk/res/layout/profile.xml
+++ b/trunk/res/layout/profile.xml
@@ -6,7 +6,10 @@
     android:fillViewport="true"
     android:orientation="vertical" >
 
-    
+       <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/navbar_only" />
       
 <LinearLayout
        android:layout_width="fill_parent"
