--- a/res/layout/popup_list.xml
+++ b/res/layout/popup_list.xml
@@ -6,12 +6,11 @@
     android:fillViewport="true"
     android:orientation="vertical"
     android:background="@drawable/photo" >
-
-    <include
+    <include
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         layout="@layout/toolbar_only" />
-       
+    
     <RelativeLayout
         android:id="@+id/popup_area"
         android:layout_width="fill_parent"
@@ -47,7 +46,7 @@
         
 
 	    <ListView
-	        android:id="@android:id/list"
+	        android:id="@+id/home_activity_list"
 	        android:layout_width="fill_parent"
 	        android:layout_height="fill_parent"
 	        android:layout_gravity="center"
@@ -58,6 +57,9 @@
 	         />
 	     </RelativeLayout>
 	    
-    
+    <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/map" />
 
 </LinearLayout>
