--- a/res/layout/participant_list.xml
+++ b/res/layout/participant_list.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/photo3"
+    android:fillViewport="true"
+    android:orientation="vertical" >
+
+ <include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/navbar_only" />
+
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/participant_listview"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#ffffff" />
+
+    
+ 
+</LinearLayout>
