--- a/trunk/res/layout/create_event.xml
+++ b/trunk/res/layout/create_event.xml
@@ -3,14 +3,19 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/ivory">
+    
+	<include
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/navbar_only" />
 	
-   
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@android:drawable/title_bar" >
+        android:background="@android:drawable/title_bar"
+        android:visibility="gone" >
 
         <TextView
             android:id="@+id/textView4"
