--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -4,5 +4,7 @@
   <color name="activity_bg">#FFFFFF</color>
   <color name="white">#FFFFFF</color>
   <color name="black">#000000</color>
+  <color name="alice_blue">#F0F8FF</color>
+  <color name="ivory">#FFFFF0</color>
     
 </resources>
