--- a/trunk/res/layout/create_event.xml
+++ b/trunk/res/layout/create_event.xml
@@ -103,10 +103,22 @@
             android:layout_gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <CheckBox
-            android:id="@+id/checkBox1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+             
+        
+        <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/checkBox1"
+    android:layout_width="fill_parent"
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:checkMark="@android:drawable/checkbox_off_background"
+    android:gravity="center_vertical"
+    android:orientation="vertical"
+    android:paddingBottom="10dip"
+    android:paddingLeft="20dip"
+    android:paddingRight="20dip"
+    android:paddingTop="10dip"
+    android:textColor="#000000" />
+        
+        
 
     </LinearLayout>
 
