--- a/trunk/res/layout/create_event.xml
+++ b/trunk/res/layout/create_event.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/ivory"
     android:fillViewport="true"
-    android:orientation="vertical"
-    android:background="@color/ivory">
-    
-	<include
+    android:orientation="vertical" >
+
+    <include
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         layout="@layout/navbar_only" />
-	
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -25,143 +25,134 @@
             android:layout_weight="0.90"
             android:text="Create New Event"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textStyle="bold" 
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button1"
             style="?android:attr/buttonStyleSmall"
-            android:background="@android:drawable/btn_default"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="3dp"
+            android:background="@android:drawable/btn_default"
+            android:enabled="false"
             android:gravity="center_vertical"
-            android:text="Done"
-            android:enabled="false" />
-    </LinearLayout>
-    
-    <ScrollView 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:fillViewport="true"
-    	android:orientation="vertical">
-        
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Event Title:"
-        android:textColor="@android:color/black"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textCapWords" 
-        android:background="@android:drawable/editbox_background">
-
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/create_event_textview_participants"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Participants:"
-        android:textColor="@android:color/black"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/create_event_edittext_participants"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="time" 
-        android:focusableInTouchMode="false"
-        android:background="@android:drawable/editbox_background"
-        />
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right" >
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Closed event?"
-            android:textColor="@android:color/black"
-            android:layout_gravity="center_vertical"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-             
-        
-        <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/checkBox1"
-    android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:checkMark="@android:drawable/checkbox_off_background"
-    android:gravity="center_vertical"
-    android:orientation="vertical"
-    android:paddingBottom="10dip"
-    android:paddingLeft="20dip"
-    android:paddingRight="20dip"
-    android:paddingTop="10dip"
-    android:textColor="#000000" />
-        
-        
-
+            android:text="Done" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Event Location:"
-        android:textColor="@android:color/black"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
-        <EditText
-            android:id="@+id/create_event_edittext_location"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPostalAddress"
-            android:focusableInTouchMode="false"
-            android:background="@android:drawable/editbox_background" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:fillViewport="true"
+            android:orientation="vertical" >
 
-    </LinearLayout>
-     <TextView
-        android:id="@+id/create_event_textview_starttime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Event Start Time:"
-        android:textColor="@android:color/black"
-        android:textAppearance="?android:attr/textAppearanceMedium" 
-        />
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Event Title:"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/black" />
 
-    <edu.mit.discoverme.CustomTimePicker
-        android:id="@+id/create_event_timepicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:soundEffectsEnabled="true" />
-    </LinearLayout>
-    
-    
+            <EditText
+                android:id="@+id/editText1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/editbox_background"
+                android:ems="10"
+                android:inputType="textCapWords" >
+
+                <requestFocus />
+            </EditText>
+
+            <TextView
+                android:id="@+id/create_event_textview_participants"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Participants:"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/black" />
+
+            <EditText
+                android:id="@+id/create_event_edittext_participants"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/editbox_background"
+                android:ems="10"
+                android:focusableInTouchMode="false"
+                android:inputType="time" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right" >
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Closed event?"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@android:color/black" />
+
+                <CheckedTextView
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/checkBox1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checkMark="@android:drawable/checkbox_off_background"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:paddingBottom="10dip"
+                    android:paddingLeft="20dip"
+                    android:paddingRight="20dip"
+                    android:paddingTop="10dip"
+                    android:textColor="#000000" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Event Location:"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/black" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <EditText
+                    android:id="@+id/create_event_edittext_location"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:drawable/editbox_background"
+                    android:ems="10"
+                    android:focusableInTouchMode="false"
+                    android:inputType="textPostalAddress" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/create_event_textview_starttime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Event Start Time:"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/black" />
+
+            <edu.mit.discoverme.CustomTimePicker
+                android:id="@+id/create_event_timepicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:soundEffectsEnabled="true" />
+        </LinearLayout>
     </ScrollView>
-</LinearLayout>
 
+</LinearLayout>
