--- a/trunk/res/layout/popup_list.xml
+++ b/trunk/res/layout/popup_list.xml
@@ -6,7 +6,8 @@
     android:fillViewport="true"
     android:orientation="vertical"
     android:background="@drawable/photo" >
-    <include
+
+    <include
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         layout="@layout/toolbar_only" />
@@ -32,16 +33,16 @@
             android:textColor="@color/white"
             android:textSize="30dip" />
         
-        <Button
+        <ImageButton
             android:id="@+id/buttonAdd"
-            android:height="8dip"
-            android:layout_width="40dip"
-            android:layout_height="36dip"
+            android:src="@drawable/btn_plus_square"
+            android:layout_width="35dip"
+            android:layout_height="35dip"
             android:onClick="onMouseclick1"
-            android:text="@string/add_button" 
             android:layout_marginRight="20dip"
-            android:layout_marginTop="10dip"
+            android:layout_marginTop="4dip"
             android:layout_alignParentRight="true"
+            android:scaleType="fitCenter"
             android:padding="0dip"/>        
         
 
