--- a/trunk/res/layout/popup_list.xml
+++ b/trunk/res/layout/popup_list.xml
@@ -15,7 +15,7 @@
     <RelativeLayout
         android:id="@+id/popup_area"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
+        android:layout_height="fill_parent" 
         android:layout_gravity="right"
         android:gravity="right"
         android:orientation="horizontal" 
